Fixed css bug footer too long

--- a/assets/css/modules/footer.sass
+++ b/assets/css/modules/footer.sass
@@ -1,6 +1,6 @@
 .m-module-footer
 	background: #181B23
-	width: 100vw
+	width: 100%
 	padding: 80px 0
 
 	.m-module-content
